--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       longitude: <span id="longitude"></span>&deg;
     </p>
     <label for="mood">enter your mood</label>
-    <input id="mood" value="rainbow" />
+    <input id="landmark" value="" placeholder= "eg Sobha baxzar metro" />
     <button id="submit">submit</button>
     <script src="sketch.js"></script>
   </body>
