Added File upload feature

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
 		<h1>Data Selfie App</h1>
 		<div>
 			<a href="index.html">Cam</a> |
-			<a href="./logs/index.html">Webcam Photos</a>
+			<a href="./logs/index.html">Webcam Photos</a> |
+			<a href="./upload.html">Upload Photos</a> |
 			<button onclick="logOut()">Log Out</button>
 		</div>
 		<p>
