--- a/public/upload.html
+++ b/public/upload.html
@@ -1,4 +1,4 @@
 <form action="/api/upload" method="post" enctype="multipart/form-data">
-	<input type="file" name="photos" />
+	<input type="file" name="photos" multiple />
 	<button type="submit">Upload</button>
 </form>
