Cloud Function MVP1

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,9 @@
 			latitude: <span id="latitude"></span>&deg;<br />
 			longitude: <span id="longitude"></span>&deg;
 		</p>
-		<label for="mood">enter your mood</label>
+		<label for="landmark"> Landmark</label>
 		<input id="landmark" value="" placeholder="eg Sobha baxzar metro" />
+
 		<button id="submit">submit</button>
 	</body>
 </html>
