"I_User Form data saved into realtime db"

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 			<a href="index.html">Cam</a> |
 			<a href="./logs/index.html">Webcam Photos</a> |
 			<a href="./upload.html">Upload Photos</a> |
+			<a href="./i_user.html">i_user</a>
 			<button onclick="logOut()">Log Out</button>
 		</div>
 		<p>
