Create DAO(data access object)

--- a/public/i_user.html
+++ b/public/i_user.html
@@ -6,6 +6,9 @@
 	<body>
         <button>Popular Location</button>
         <button>MY Location</button>
+        <form action="api/popularlocation" method="POST">
+        <input type="submit">
+        </form>
         <div>
             <img style="margin-top: 20px;" src="iuser.jpg" width="100" height="100">
         </div>
