fetch details from firestore

--- a/public/i_user.html
+++ b/public/i_user.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>I_User</title>
-	</head>
+        <title>I_User</title>
+        <script src="./i_user.js"></script>
+        </head>
 	<body>
         <button>Popular Location</button>
         <button>MY Location</button>
-        <form action="api/popularlocation" method="POST">
+        <form action="api/popularlocation" method="GET">
         <input type="submit">
         </form>
         <div>
