history of Iuser and puser

--- a/public/i_user.html
+++ b/public/i_user.html
@@ -17,6 +17,9 @@
             <h4>150</h4>
             <button>Book</button>
         </div>
+        <div>
+            <a href="./booking.html" style="background-color: black;color: white;">Book</a>
+        </div>
          <div>
              <form method="post" action="/api/uploaddetails">
                  Email:<input type="text" name="email"></br></br>
